# crossbatterychargeguard

./: README.md  hacs.json  lovelace-dashboard.yaml  pyproject.toml
custom_components/battery_cross_charge_guard/: __init__.py  binary_sensor.py  config_flow.py  const.py  controller.py  dashboard.py  manager.py  manifest.json  models.py  repair.py  sensor.py  strings.json
custom_components/battery_cross_charge_guard/frontend/: dashboard.js
custom_components/cross_battery_charg_guard/: __init__.py  config_flow.py  const.py  manifest.json  models.py  registry.py  repair.py  rules.py  strings.json
custom_components/cross_battery_charge_guard/: __init__.py  config_flow.py  const.py  dashboard.py  manager.py  manifest.json  models.py  sensor.py  strings.json
custom_components/solax_cross_battery_guard/: const.py  detector.py  diagnostics.py  manifest.json  strings.json
tests/: test_controller.py  test_detector.py  test_manager.py
