[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-cross-charge-guard"
version = "0.1.0"
description = "Home Assistant battery cross-charge balancing controller"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["custom_components.battery_cross_charge_guard"]

